users controller and views created, sign up actions added

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -6,5 +6,9 @@
 <body>
   <h1>Welcome to the Dynasty Hotel!</h1>
 
+
+
+   <%= link_to "Sign Up", signup_path %> | <%= link_to "Log In", login_path %>
+
 </body>
 </html>
